--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^15.0.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
