--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.416.0",
+    "microcms-js-sdk": "^3.1.2",
     "next": "14.2.5",
     "next-i18next": "^15.3.0",
     "next-themes": "^0.3.0",
