--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "rm -rf .next/cache/fetch-cache && next build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
